# repo-template-mkslides

./: .gitignore  mkslides.yml  pyproject.toml
.github/: sync_template_failure.md
.github/workflows/: publish_slides.yaml  sync_template.yaml
my_pkg/: main.py
slides/: 20260113_doc_as_code.md  20260113_etl.md  mkslides_template.md
tests/: test_main.py
